Corrige defectos de vistas en API
