# sepomex_manager_api_doc.yml
@@ -4,16 +4,16 @@
 swagger: '2.0'
 info:
   version: "1.0.0"
-  title: FuelManager - Gestor de Flotilla/Gas para Vehículos
+  title: SEPOMEX - Gestor de Estados, Municipios, Ciudades, Colonias y Codigos Postales de Mexico
   description: |
     </br>
-    API para Gestionar Gasolina y flotilla de vehículos.
-    CRUD functions can be applied to manage the data.
+    API para Gestionar Estados, Municipios, Ciudades, Colonias
+    y Codigos Postales de Mexico.
     </br>
     </br>
   contact: 
       name: API Support
-      url: https://github.com/jorgeMorfinezM/GasControllerApi/blob/master/README.md
+      url: https://github.com/jorgeMorfinezM/sepomex_api_test/
       email: jorge.morfinez.m@gmail.com
   license:
     name: Apache 2.0
@@ -21,49 +21,36 @@ info:
   
 host:
   localhost:8080
-basePath: "/api/v1/manager"
+basePath: "/api/v1/manager/sepomex"
 schemes:
-  - https
   - http
 consumes:
   - application/json
 produces:
   - application/json
-#components:
-#    securitySchemes:
-#    bearerAuth:
-#      type: https
-#      scheme: bearer
-#      bearerFormat: JWT
-#securityDefinitions:
-#  OAuth2:
-#    description: Contiene la llamada a autenticar la API para obtener el Bearer Token
-#    type: oauth2
-#    flow: accessCode
-#    authorizationUrl: https://cargamos-api-test.herokuapp.com/api/ecommerce/authorization/
-#    tokenUrl: https://cargamos-api-test.herokuapp.com/api/ecommerce/authorization/
-# Describe your paths here
 tags:
   - name: "Login"
     description: "Endpoint to get Token Bearer POST the username and password registered"
-  - name: "List Users"
-    description: "Endpoint to list Users"
-  - name: "Insert Driver"
-    description: "Endpoint to insert"
-  - name: "GET List Drivers"
-    description: "Get the list of the Drivers"
-  - name: "Manage Stores"
-    description: "Endpoint to manage Store data using: add, get, delete and update methods to and from the database"
-  - name: "Manage Products"
-    description: "Endpoint to manage product data using: add, get, delete and update methods to and from the database"
+  - name: "Looking for States by Filters"
+    description: "Endpoint to find States"
+  - name: "Manage States"
+    description: "Endpoint to insert and get all States (manage)"
+  - name: "Looking for Town by Filters"
+    description: "Endpoint to find Towns"
+  - name: "Manage Towns"
+    description: "Endpoint to insert and get all Towns (manage)"
+  - name: "Manage Cities"
+    description: "Endpoint to insert and get all Cities (manage)"
+  - name: "Manage Suburbs"
+    description: "Endpoint to insert and get all Suburbs (manage)"
 
 paths:
-  /login/:
+  /auth/login/:
     post:
       tags:
         - "Login"
       description:
-        Get Bearer Token by username, password and RFC ciudad to authenticate to the API endpoints.
+        Get Bearer Token by username (email) and password to authenticate to the API endpoints.
       parameters:
         - name: Authorization
           in: body
@@ -104,27 +91,27 @@ paths:
             items:
               $ref: '#/definitions/Error'
 
-  /list/:
+  /estado/filter/:
     get:
       tags:
-        - "List Users"
+        - "Looking for States by Filters"
       description:
-        Get All users registered (only by admins).
-#      parameters:
-#        - name: Authorization
-#          in: body
-#          description: Payload with authentication credentials to API.
-#          required: true
-#          schema:
-#            $ref: '#/definitions/Authorization'
+        Get All States registered by filters.
+      parameters:
+        - name: FilterStates
+          in: body
+          description: Payload with filters to find States.
+          required: true
+          schema:
+            $ref: '#/definitions/FilterStates'
       responses:
         200:
           description: Successful response
           schema:
-            title: DataUserLogin
+            title: ResponseFilterStates
             type: array
             items:
-              $ref: '#/definitions/DataUserLogin'
+              $ref: '#/definitions/ResponseFilterStates'
         404:
           description: Page Not Found
         default:
@@ -150,27 +137,27 @@ paths:
             items:
               $ref: '#/definitions/Error'
 
-  /gas/driver/:
+  /estado/:
     post:
       tags:
-        - "Insert Driver"
+        - "Manage States"
       description:
-        Insert data Driver.
+        Endpoint to insert and get all States (manage).
       parameters:
-        - name: RequestDriver
+        - name: FilterStates
           in: body
-          description: Payload with Driver data to insert.
+          description: Payload with States data to insert.
           required: true
           schema:
-            $ref: '#/definitions/RequestDriver'
+            $ref: '#/definitions/FilterStates'
       responses:
         200:
-          description: Successful response Driver Register
+          description: Successful response States Register
           schema:
-            title: ResponseDriver
+            title: ResponseFilterStates
             type: array
             items:
-              $ref: '#/definitions/ResponseDriver'
+              $ref: '#/definitions/ResponseFilterStates'
         404:
           description: Page Not Found
         default:
@@ -197,24 +184,24 @@ paths:
               $ref: '#/definitions/Error'
     get:
       tags:
-        - "GET List Drivers"
+        - "Manage States"
       description:
-        Get data Driver.
+        Get data States.
       parameters:
-        - name: RequestDriver
+        - name: Pagination
           in: body
           description: Payload with pagination data to Get.
-          required: true
+          required: false
           schema:
             $ref: '#/definitions/Pagination'
       responses:
         200:
           description: Successful response Driver Register
           schema:
-            title: ResponseDriver
+            title: ResponseFilterStates
             type: array
             items:
-              $ref: '#/definitions/ResponseDriver'
+              $ref: '#/definitions/ResponseFilterStates'
         404:
           description: Page Not Found
         default:
@@ -240,6 +227,141 @@ paths:
             items:
               $ref: '#/definitions/Error'
 
+  /municipio/filter/:
+    get:
+      tags:
+        - "Looking for Town by Filters"
+      description:
+        Get All Towns registered by filters.
+      parameters:
+        - name: FilterTown
+          in: body
+          description: Payload with filters to find Towns.
+          required: true
+          schema:
+            $ref: '#/definitions/FilterTown'
+      responses:
+        200:
+          description: Successful response
+          schema:
+            title: ResponseFilterTowns
+            type: array
+            items:
+              $ref: '#/definitions/ResponseFilterTowns'
+        404:
+          description: Page Not Found
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        409:
+          description: Request Data Conflict
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        401:
+          description: 401 Unauthorized
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+
+  /municipio/:
+    post:
+      tags:
+        - "Manage Towns"
+      description:
+        Endpoint to insert and get all Towns (manage).
+      parameters:
+        - name: FilterTown
+          in: body
+          description: Payload with Town data to insert.
+          required: true
+          schema:
+            $ref: '#/definitions/FilterTown'
+      responses:
+        200:
+          description: Successful response Town Register
+          schema:
+            title: ResponseFilterTowns
+            type: array
+            items:
+              $ref: '#/definitions/ResponseFilterTowns'
+        404:
+          description: Page Not Found
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        409:
+          description: Request Data Conflict
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        401:
+          description: 401 Unauthorized
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+    get:
+      tags:
+        - "Manage Towns"
+      description:
+        Get data Towns.
+      parameters:
+        - name: Pagination
+          in: body
+          description: Payload with pagination data to Get.
+          required: false
+          schema:
+            $ref: '#/definitions/Pagination'
+      responses:
+        200:
+          description: Successful response Town Register
+          schema:
+            title: ResponseFilterTowns
+            type: array
+            items:
+              $ref: '#/definitions/ResponseFilterTowns'
+        404:
+          description: Page Not Found
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        409:
+          description: Request Data Conflict
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        401:
+          description: 401 Unauthorized
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
 
 definitions:
   Error:
@@ -256,27 +378,31 @@ definitions:
           error_message:
             type: string
 
+  DataUserLogin:
+    allOf:
+      - $ref: '#/definitions/DataUserLogin'
+      - required:
+          - Username
+          - Password
+        type: "object"
+        properties:
+          Username:
+            type: string
+          Password:
+            type: string
+
   Authorization:
     allOf:
       - $ref: '#/definitions/Authorization'
       - required:
         - username
         - password
-        - is_active
-        - is_staff
-        - is_superuser
         type: "object"
         properties:
           username:
             type: string
           password:
             type: string
-          is_active:
-            type: boolean
-          is_staff:
-            type: boolean
-          is_superuser:
-            type: boolean
 
   TokenRequest:
     allOf:
@@ -296,111 +422,88 @@ definitions:
             type: string
           data:
             type: array
-              items:
-                $ref: '#/definitions/DataUserLogin'
+            items:
+              $ref: '#/definitions/DataUserLogin'
 
-  DataUserLogin:
+  Pagination:
     allOf:
-      - $ref: '#/definitions/DataUserLogin'
+      - $ref: '#/definitions/Pagination'
       - required:
-        - Username
-        - Password
-        - IsActive
-        - IsStaff
-        - IsSuperUser
-        - CreationDate
-        - UpdatedDate
+        - offset
+        - limit
         type: "object"
         properties:
-          Username:
-            type: string
-          Password:
-            type: string
-          IsActive:
-            type: boolean
-          IsStaff:
-            type: boolean
-          IsSuperUser:
-            type: boolean
-          CreationDate:
-            type: string
-          UpdatedDate:
-            type: string
-
-  RequestDriver:
-    allOf:
-      - $ref: '#/definitions/RequestDriver'
-      - required:
-        - nombre_conductor
-        - apellido_paterno_conductor
-        - apellido_materno_conductor
-        - domicilio_conductor
-        - estatus_conductor
-        - vehiculo
-        - rol_usuario
-        type: "object"
-        properties:
-          nombre_conductor:
-            type: string
-          apellido_paterno_conductor:
-            type: string
-          apellido_materno_conductor:
-            type: string
-          domicilio_conductor:
-            type: string
-          estatus_conductor:
-            type: string
-          vehiculo:
+          offset:
             type: integer
             format: int64
-          rol_usuario:
+          limit:
             type: integer
             format: int64
 
-  ResponseDriver:
+  FilterStates:
     allOf:
-      - $ref: "#/definitions/ResponseDriver"
+      - $ref: '#/definitions/FilterStates'
       - required:
-        - id_driver
-        - name_driver
-        - lastname_driver
-        - lastname_last_driver
-        - address_driver
-        - driver_added_date
-        - status_driver
-        - vehicle_driver
-        - vehicle_manufacturer
-        - vehicle_model
-        - vehicle_brand
-        - role_driver
-        - last_date_updated
+        - nombre_estado
+        - clave_estado
         type: "object"
         properties:
-          id_driver:
+          nombre_estado:
+            type: string
+          clave_estado:
+            type: string
+
+  ResponseFilterStates:
+    allOf:
+      - $ref: '#/definitions/ResponseFilterStates'
+      - required:
+        - id_estado
+        - nombre_estado
+        - clave_estado
+        type: "object"
+        properties:
+          id_estado:
             type: integer
             format: int64
-          name_driver:
+          nombre_estado:
             type: string
-          lastname_driver:
+          clave_estado:
             type: string
-          lastname_last_driver:
+
+  FilterTown:
+    allOf:
+      - $ref: '#/definitions/FilterTown'
+      - required:
+        - nombre_municipio
+        - clave_municipio
+        - id_estaddo
+        type: "object"
+        properties:
+          nombre_municipio:
             type: string
-          address_driver:
+          clave_municipio:
             type: string
-          driver_added_date:
-            type: string
-          status_driver:
-            type: string
-          vehicle_driver:
-            type: string
-          vehicle_manufacturer:
-            type: string
-          vehicle_model:
-            type: string
-          vehicle_brand:
-            type: string
-          rol_driver:
+          id_estado:
             type: integer
             format: int64
-          last_date_updated:
+
+  ResponseFilterTowns:
+    allOf:
+      - $ref: '#/definitions/ResponseFilterTowns'
+      - required:
+        - id_municipio
+        - nombre_municipio
+        - clave_municipio
+        - clave_estado
+        type: "object"
+        properties:
+          id_municipio:
+            type: integer
+            format: int64
+          nombre_municipio:
             type: string
+          clave_municipio:
+            type: string
+          clave_estado:
+            type: integer
+            format: int64
